--- a/Lyxdesic-Boxstarter/Lyxdesic-Boxstarter.nuspec
+++ b/Lyxdesic-Boxstarter/Lyxdesic-Boxstarter.nuspec
@@ -4,9 +4,9 @@
     
   <metadata>
     <id>Lyxdesic-Boxstarter</id>
-    <title>Altova XMLSpy 2016 Enterprise (Install)</title>
+    <title>Boxstarter package</title>
    
-    <version>0.1.0</version>
+    <version>0.1.1</version>
     <authors>michaelmasterson</authors>
     <owners>michaelmasterson</owners>
     <description>Package description</description>
