--- a/lyx-packer/lyx-packer.nuspec
+++ b/lyx-packer/lyx-packer.nuspec
@@ -3,7 +3,7 @@
 <!-- Read this before publishing packages to chocolatey.org: https://github.com/chocolatey/chocolatey/wiki/CreatePackages -->
     
   <metadata>
-    <id>packer</id>
+    <id>lyx-packer</id>
     <title>packer Boxstarter package</title>
     <version>0.0.1</version>
     <authors>michaelmasterson</authors>
